# psag.cc

./: .env  Cargo.toml  Dockerfile  Dockerfile-db  README.md  dev-flags.sh  docker-compose.yaml  nginx.conf  psag.cc.conf  ssh.sh
docker/: Dockerfile  Dockerfile-db
migrations/2018-01-16-152722_urls/: down.sql  up.sql
schemas/: urls.sql
src/: logging.rs  main.rs  models.rs  service.rs
src/db/: schema.rs
src/url_shortener/: mod.rs  resolve.rs  resource_manager.rs  shorten.rs
static/www/: head.partial.html  index.html  index.js
www/: 404.html  index.html  index.js  resolve-error.html  style.css
