[package]
name = "psag_cc"
version = "0.1.0"
authors = ["goldsborough <peter@goldsborough.me>"]

[dependencies]
chrono = "0.4.0"
diesel = {version="1.1.0", features = ["postgres"]}
futures = "0.1.17"
futures-cpupool = "0.1.8"
handlebars = "0.29.1"
hyper = "0.11.13"
log = "0.4.1"
postgres = "0.15.1"
r2d2 = "0.8.2"
r2d2-diesel = "1.0.0"
rand = "0.4.2"
serde = "1.0.27"
url = "1.6.0"
num_cpus = "1.8.0"
env_logger = "0.5.2"
ansi_term = "0.10.2"
